feat: implement test mail address delete API
